# ConvLab-3

./: .dockerignore  .gitattributes  .gitignore  .rsync-exclude  .rsync-results  Dockerfile  MANIFEST.in  NOTICE  README.md  extract_emotions.py  pyproject.toml  requirements.txt  setup.py  update_github_master.sh
.github/ISSUE_TEMPLATE/: add_dataset.md  add_model.md  bug_report.md
agent_examples/: test_BERTNLU-RuleDST-MLEPolicy-TemplateNLG.py  test_MILU-RuleDST-RulePolicy-TemplateNLG.py  test_SUMBT-LaRL.py  test_SUMBT-RulePolicy-TemplateNLG.py  test_SVMNLU-RuleDST-RulePolicy-TemplateNLG.py  test_Sequicity.py  test_SetSUMBT-LaRL.py  test_SetSUMBT-VtraceRNN-TemplateNLG.py
convlab/: __init__.py
convlab2/: __init__.py
data_loaders/: utterance_loader.py
deploy/: dep_config.json
plot_results/: README.md  plot.py
tests/: qex_convlab_eval.sh  test_BERTNLU-RuleDST-DQNPolicy-TemplateNLG.py  test_BERTNLU-RuleDST-LaRL.py  test_BERTNLU-RuleDST-PGPolicy-TemplateNLG.py  test_BERTNLU-RuleDST-RulePolicy-TemplateNLG.py  test_BERTNLU-RuleDST-TUS-TemplateNLG.py  test_BERTNLU-RuleDST-VtraceRNN-TemplateNLG.py  test_COMER_RulePolicy_TemplateNLG.py  test_DAMD.py  test_LAVA.py  test_NLG_end2end.py  test_PPO.py  test_RulePolicy.py  test_SUMBT-RulePolicy-TemplateNLG.py  test_SetSUMBT-END-PPO-TemplateNLG.py  test_SetSUMBT-LaRL.py  test_SetSUMBT-RulePolicy-TemplateNLG.py  test_SetSUMBT-VtraceRNN-TemplateNLG.py  test_VtraceRNN.py  test_end2end.py  test_vtrace_masking.py
tutorials/: Add_New_Model.md  Data_Loading_and_SL.ipynb  Getting_Started.ipynb  RL_train+evaluate.ipynb
(+1873 files in other folders)
