[tool.poetry]
name = "convlab"
version = "3.0.2b"
description = "An Open-source Dialog System Toolkit"
authors = ["convlab"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.44"
datasets = "^2.17.1"
embeddings = "^0.0.8"
fuzzywuzzy = "^0.18.0"
gitpython = "^3.1.42"
litellm = "^1.26.3"
matplotlib = "^3.8.3"
nltk = "^3.8.1"
openai = "^1.12.0"
pandas = "^2.2.0"
sacrebleu = "^2.4.0"
sentence-transformers = "^2.0.0"
spacy = "^3.7.4"
tensorboardx = "^2.6.2.2"
# Torch versioning:
# Specific version for macOS with x86_64 architecture and latest version for other platforms
torch = [
    { version = "==2.2.2", markers = "platform_machine == 'x86_64' and platform_system == 'Darwin'" },
    { version = "^2.3", markers = "platform_machine != 'x86_64' or platform_system != 'Darwin'" },
]
transformers = "^4.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[[tool.poetry.source]]
name = "hhu"
url = "http://pypi.repo.test.hhu.de/simple/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
extend = "~/.config/ruff/config.toml"
